--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/puru-khedre/chatApp#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "~3.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
